# utsuwa

./: CHANGELOG.md  MERGE_INFO.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json
.github/: MERGE_PR.txt
.github/workflows/: codeql.yml  copilot-setup-steps.yml
src/: app.css  hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/content/blog/: dev-log-2026-5-29.md
src/content/docs/guides/: local-llm-setup.md  troubleshooting.md
src/lib/components/docs/: DocsGetStartedCards.svelte  DocsHeader.svelte  DocsPrevNext.svelte  DocsSearch.svelte  DocsSidebarSection.svelte
src/lib/components/layout/: Header.svelte
src/lib/components/onboarding/steps/: ServicesStep.svelte
src/lib/components/ui/: CompanionStatus.svelte  InfoModal.svelte  TopRightButtons.svelte
src/lib/config/: links.ts  site.ts
src/lib/services/chat/: client-chat.ts
src/lib/services/providers/: client-models.ts  local-endpoints.test.ts  local-endpoints.ts  model-fetcher.ts  registry.test.ts  registry.ts  use-model-fetch.ts
src/lib/stores/: settings.svelte.ts
src/routes/: +page.svelte  +page.ts
src/routes/api/chat/: +server.ts
src/routes/api/providers/models/: +server.ts
src/routes/app/: +page.svelte
src/routes/app/settings/: +layout.svelte  +page.svelte
src/routes/app/settings/developer/: +page.svelte
src/routes/blog/: +layout.svelte  +page.svelte
src/routes/blog/[slug]/: +page.svelte
src/routes/docs/: +layout.svelte  +page.svelte  +page.ts
src/routes/docs/[...slug]/: +page.svelte
src/routes/overlay/: +page.svelte
(+1 files in other folders)
